--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -252,7 +252,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manche 4:}\n"
 "\\begin{itemize}\n"
-"  \\item Toutes les bordures jaunes sur la Tuile de Départ (I) sont ignorées jusqu'à la fin de la partie.\n"
+"  \\item Les bordures jaunes des Tuiles de Départ (I) sont ignorées jusqu'à la fin de la partie.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 6, 9 et 12:}\n"
 "\\begin{itemize}\n"
