--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -310,11 +310,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"Les Points de Victoire sont comptés selon les Règles du Livre de Tournoi. De plus, vous gagnez:\n"
+"Les Points de Victoire sont comptés selon les Règles du Livre de Tournoi. De plus, gagnez:\n"
 "\\begin{itemize}\n"
 "  \\item 2 VP en Revendiquant les Terres Désolées pour la première fois\n"
 "  \\item 2 VP en ayant Revendiquées les Terres Désolées à la fin de la partie\n"
-"  \\item 5 VP en ayant apporté le Graal dans votre Ville de Faction OU VP en état en possession du Graal à la fin de la partie\n"
+"  \\item 5 VP en ayant le Graal dans votre Ville de Faction OU 3 VP en possédant du Graal à la fin de la partie\n"
 "\\end{itemize}\n"
 "\n"
 
