--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -273,10 +273,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Séparez le Deck Artefact en 3 (Mineur, Majeur et Relique).\n"
-"    Un Joueur ne gagne que du Mineur sur les Tuiles de Départ ou Lointaines, Mineur ou Majeur sur les Tuiles Proches et Majeur ou Relique sur les Tuiles Centre.\n"
+"  \\item Séparez le Deck Artefact en 3 par rareté.\n"
+"    Un Joueur ne gagne que du Mineur sur les Tuiles de Départ ou Lointaines, Mineur ou Majeur sur les Proches et Majeur ou Relique sur les Centres.\n"
 "  \\item Séparez le Deck Sort en 2 (Sorts Basiques et Experts). Flèche Magique est un Sort Basique.\n"
-"    Un Joueur ne gagne que des Sorts Basiques sur les Tuiles de Départ ou Lointaines, des Sorts Experts sur les Tuiles Proches ou Centre.\n"
+"    Un Joueur ne gagne que des Sorts Basiques sur les Tuiles de Départ ou Lointaines et Experts sur les Proches ou Centre.\n"
 "\\end{itemize}\n"
 "\n"
 
