--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -335,7 +335,7 @@ msgid ""
 msgstr ""
 "\\subsection*{\\MakeUppercase{Règles Optionnelles}}\n"
 "\\begin{itemize}\n"
-"  \\item Chaque \\svg[12]{movement_token_green} marque un monolithe double sens au lieu d'un sens unique.\n"
+"  \\item Les \\svg[12]{movement_token_green} indiquent des monolithes double sens.\n"
 "    Les Héros peuvent se déplacer dans les deux directions en payant 1~\\svgeven{movement}.\n"
 "  \\item Les monolithes commencent inactifs (placez la face inactive \\svg[12]{movement_token_red} visible).\n"
 "    Un Héros doit payer 1~\\svg{building_materials} et 1~\\svgeven{movement} pour l'activer.\n"
