--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -293,7 +293,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Chaque \\svg[12]{movement_token_green} sur le Plateau est un monolithe à sens unique.\n"
-"    Un Héros sur une Case avec une \\svg[12]{movement_token_green} vers l'extérieur peut payer 1 \\svgeven{movement} pour aller sur la Case pointée par la \\svg[12]{movement_token_green}.\n"
+"    Un Héros sur une Case avec une \\svg[12]{movement_token_green} vers l'extérieur peut payer 1~\\svgeven{movement} pour aller sur la Case pointée par la \\svg[12]{movement_token_green}.\n"
 "  \\item Vous pouvez défendre votre Ville avec votre Héros si votre Héros Principal est sur la Tuile de Départ (I).\n"
 "\\end{itemize}\n"
 "\n"
