--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -36,7 +36,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item 2P × Near (IV-V) Map Tiles (one with Obelisk, adjacent to Center Map Tile)
+  \item 2P × Near (IV-V) Map Tiles, one with Obelisk adjacent to Center Map Tile (one Obelisk per player)
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
 
