remove cityhall, change near tile wording

--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -26,7 +26,7 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item City Hall
+%  \item City Hall
   \item Mage Guild
 \end{itemize}
 
@@ -36,7 +36,8 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item 2P × Near (IV-V) Map Tiles, one with Obelisk adjacent to Center Map Tile (one Obelisk per player)
+  \item P × Near (IV-V) Map Tiles, with Obelisk adjacent to Center Map Tile
+  \item P × Near (IV-V) Map Tiles without Obelisk
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
 
