--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -35,8 +35,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item P × Near (IV-V) Map Tiles with Obelisk adjacent to Center Map Tile
-  \item P × Near (IV-V) Map Tiles without Obelisk
+  \item 2P × Near (IV-V) Map Tiles half with Obelisk and adjacent to Center Map Tile
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
 
