--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -38,6 +38,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2P × Near (IV-V) Map Tiles half with Obelisk and adjacent to Center Map Tile
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
+\columnbreak
 
 \subsection*{\MakeUppercase{Victory Condition}}
 When any player first flags ``The Hill'', each player, including the one who flagged it, gets two more full turns. After all players have completed their turns, the game ends, and the player who controls ``The Hill'' at that time wins. However, if ``The Hill'' has not been flagged by the start of Round 9, the first player to flag it during or after Round 9 immediately wins the game.
